--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
 
     <div id="banner">
-        <a href="./blog.html">
+        <a href="blog.html">
             <div class="imgContainer"><img src="./assets/img/Blog/woman3.jfif" alt=""></div>
             <div class="content">
                 <h2>The Title of the Article</h2>
@@ -130,7 +130,7 @@
             <h1 class="sectionTitle">Popular</h1>
             <div class="cardsContainer">
                 <div class="card big">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman3.jfif" alt="">
                         </div>
@@ -140,7 +140,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -150,7 +150,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -160,7 +160,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -170,7 +170,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -180,7 +180,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -190,7 +190,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -200,7 +200,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -210,7 +210,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
@@ -226,7 +226,7 @@
             <h1 class="sectionTitle">Off Beat</h1>
             <div class="cardsContainer">
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -236,7 +236,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -246,7 +246,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -256,7 +256,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -272,7 +272,7 @@
             <h1 class="sectionTitle">Nutrition</h1>
             <div class="cardsContainer">
                 <div class="card whole">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -286,7 +286,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -296,7 +296,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -306,7 +306,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -316,7 +316,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -326,7 +326,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -336,7 +336,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -346,7 +346,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -362,7 +362,7 @@
             <h1 class="sectionTitle">Off Beat</h1>
             <div class="cardsContainer">
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -372,7 +372,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -382,7 +382,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -392,7 +392,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -408,7 +408,7 @@
             <h1 class="sectionTitle">Nutrition</h1>
             <div class="cardsContainer">
                 <div class="card whole">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -422,7 +422,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -432,7 +432,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -442,7 +442,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -452,7 +452,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -462,7 +462,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -472,7 +472,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -488,7 +488,7 @@
             <h1 class="sectionTitle">Off Beat</h1>
             <div class="cardsContainer">
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -498,7 +498,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -508,7 +508,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -518,7 +518,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -534,7 +534,7 @@
             <h1 class="sectionTitle">Nutrition</h1>
             <div class="cardsContainer">
                 <div class="card whole">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -548,7 +548,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -558,7 +558,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -568,7 +568,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -578,7 +578,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -588,7 +588,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -598,7 +598,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -608,7 +608,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="./blog.html">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
