--- a/blog.html
+++ b/blog.html
@@ -23,72 +23,72 @@
             <nav>
                 <ul>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="trainingToggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu" id="training">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training1Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu" id="training1">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training2Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu" id="training2">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training3Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu close" id="training3">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training4Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu close" id="training4">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training5Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu close" id="training5">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
                     <li>
-                        <div class="name"><a href="">Nutrition</a></div>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
                         <nav class="subMenu close" id="training6">
                             <ul>
-                                <li><a href="">Lose Weight</a></li>
-                                <li><a href="">Gain Weight</a></li>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
                             </ul>
                         </nav>
                     </li>
@@ -111,7 +111,7 @@
             </ul>
         </nav>
     </div>
-    <main class="blogContainer">
+    <main class="blogContainer" id="top">
         <article class="blog">
             <div class="blogTitle">
                 <h1>The Article Title</h1>
