--- a/blogs.html
+++ b/blogs.html
@@ -112,27 +112,13 @@
     </div>
     <main>
 
-        <section class="superCategory">
+        <section class="popular" id="top">
             <h1 class="sectionTitle">Nutrition</h1>
             <div class="cardsContainer">
-                <div class="card whole">
-                    <a href="">
+                <div class="card big">
+                    <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque cupiditate cumque nihil,
-                                reprehenderit quia eligendi voluptatum architecto et cum ratione expedita maxime neque
-                                dicta?
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/woman3.jfif" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -140,9 +126,9 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -150,7 +136,17 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -160,7 +156,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
                         <div class="cardImg">
                             <img src="./assets/img/Blog/burger2.jfif" alt="">
                         </div>
@@ -170,9 +166,9 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -180,9 +176,9 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -190,9 +186,19 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/woman2.jfif" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
